# order_service

./: .gitignore  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 455779e2afb6_quantity_1_constraint.py  6a64f01b2875_initial_migration.py  a2fe7ff8d4cd_outbox_table_added.py  c7dd9ad40655_payment_table_added.py  e981ee5ddccf_inbox_table_added.py  f4c83d5e1ec1_initial_migration.py
app/: config.py
app/application/: container.py  create_order.py  exception_handlers.py  exceptions.py  get_order.py  process_inbox.py  process_outbox.py  process_payment_callback.py  write_to_inbox.py
app/domain/: models.py
app/infrastructure/: container.py  db_schema.py  http_clients.py  kafka_consumer.py  kafka_producer.py  repositories.py  unit_of_work.py
app/presentation/: api.py  container.py  exception_handlers.py  inbox_worker.py  inbox_writer.py  outbox_worker.py
app/utils/: logging.py  stable_hash.py
github/workflows/: deploy.yml
